--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "paths": {
+      "@equinor/esv-intersection": [
+        "./node_modules/@equinor/esv-intersection/dist/index.d.ts"
+      ]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
