--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wellbore-visualizer",
+  "homepage": "https://danielsantiago1002.github.io/wellbore-visualizer/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
